--- a/FrontPage.html
+++ b/FrontPage.html
@@ -1,3 +1,3 @@
 <html>
-    <title> This is the first line.</title>
+    <title> This is the first line.And this is the first progress</title>
 </html>
