--- a/front.html/about.html
+++ b/front.html/about.html
@@ -16,13 +16,16 @@
     </div>
     <nav class="navbar">
         <ul class="nav-list">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#contact">Contact Us</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
             <input type="text" name="search" id="search">
             <button class="btn btn-sm">Search Book</button>
         </ul>
     </nav>
+<footer>
+    <p>Made by team of noobs</p>
+</footer>
 </body>
 </html>
