--- a/front.html/about.html
+++ b/front.html/about.html
@@ -8,11 +8,13 @@
     <title>Bookhub</title>
 </head>
 <body>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <div class="top">
         <img id="logo" src="" alt="BookHub" />
-        <p class="quotes">"The man who doesnot read good books is no better than the man who can't"
-                         - Mark Twain                                               
-        </p>
+        <p>"The man who doesnot read good books is no better than the man who can't"
+            </p>
+            <p>- Mark Twain</p>                                              
     </div>
     <nav class="navbar">
         <ul class="nav-list">
@@ -24,8 +26,35 @@
             <button class="btn btn-sm">Search Book</button>
         </ul>
     </nav>
-<footer>
-    <p>Made by team of noobs</p>
-</footer>
+       <h3 class="team">Our Team</h3>
+        <div class="our-team">
+            <div class="kripesh">
+                <img id="photo" src="" alt="kripesh" width="100px" height="100px">
+                <p>Kripesh Pathak</p>
+                <p>Contact no:9862906626</p>
+                <div class="social-media">
+                    <a id="fb" href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a id="twtr" href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                    <a id="insta" href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a id="lin" href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+                </div>
+            </div>
+            <div class="adarsha">
+                <img id="photo" src="" alt="adarsha" width="100px" height="100px">
+                <p>Adarsha Pokhrel</p>
+                <p>Contact no:9862906626</p>
+            </div>
+            <div class="ashish">
+                <img id="photo" src="" alt="ashish" width="100px" height="100px">
+                <p>Ashish Shrestha</p>
+                <p>Contact no:9862906626</p>
+            </div>
+            <div class="sameen">
+                <img id="photo" src="" alt="sameen" width="100px" height="100px">
+                <p>Sameen Kunwar</p>
+                <p>Contact no:9862906626</p>
+
+            </div>
+        </div>
 </body>
 </html>
