--- a/front.html/contact.html
+++ b/front.html/contact.html
@@ -10,9 +10,9 @@
 <body>
     <div class="top">
         <img id="logo" src="" alt="BookHub" />
-        <p class="quotes">"The man who doesnot read good books is no better than the man who can't"
-                         - Mark Twain                                               
-        </p>
+        <p>"The man who doesnot read good books is no better than the man who can't"
+            </p>
+            <p>- Mark Twain</p>                                              
     </div>
     <nav class="navbar">
         <ul class="nav-list">
@@ -24,25 +24,37 @@
             <button class="btn btn-sm">Search Book</button>
         </ul>
     </nav>
-    <div class="container">
+    <div class="contact-text">
+        <p>
+           <h3> Welcome to BookHub </h3>
+           If you have any queries you can place them below, our team will be keen 
+           to address them as soon as possible 
+           Or you can directly contact <a href="about.html">Our Team</a>
+        </p>
+        </div>
+    <div class="form-container">
+        <div class="title">Place Your Queries Here</div>
         <form action="#">
             <div class="user-details">
-                <div class="input-box">
+                <div class="input-box1">
                     <span class="details">Full name</span>
                     <input type="text" placeholder="Enter your name" required>
                 </div>
-                <div class="input-box">
+                <div class="input-box2">
                     <span class="details">Email</span>
                     <input type="text" placeholder="Enter your email" required>
                 </div>
-                <div class="input-box">
+                <div class="input-box3">
                     <span class="details">Phone number</span>
                     <input type="text" placeholder="Enter your phone no." required>
                 </div>
-                <div class="input-box">
+                <div class="input-box4">
                     <span class="details">Query</span>
                     <input type="text" placeholder="How can we help you?" required>
                 </div>
+            </div>
+            <div class="button">
+                <input type="submit" value="Send">
             </div>
         </form>
     </div>
