--- a/front.html/home.html
+++ b/front.html/home.html
@@ -12,9 +12,9 @@
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <div class="top">
         <img id="logo" src="" alt="BookHub" />
-        <p class="quotes">"The man who doesnot read good books is no better than the man who can't"
-                         - Mark Twain                                               
-        </p>
+        <p>"The man who doesnot read good books is no better than the man who can't"
+            </p>
+            <p>- Mark Twain</p>                                              
     </div>
     <nav class="navbar">
         <ul class="nav-list">
@@ -26,19 +26,23 @@
             <button class="btn btn-sm">Search Book</button>
         </ul>
     </nav>
-    <div class="grid-container">
-        <div class="grid-item1"><a href="#educational">Educational
-            <img src="ed books.webp" alt="educational" width="150" height="=150">
-        </a></div>
-        <div class="grid-item2"><a href="#religious">Religious
-            <img src="rel books.webp" alt="religious" width="150" height="=150">
-        </a></div>
-        <div class="grid-item3"><a href="#literature">Literature
-            <img src="lit books.webp" alt="literature" width="150" height="=150">
-        </a></div>
-        <div class="grid-item4"><a href="#miscellaneous">Miscellaneous
-            <img src="mis books.webp" alt="miscalleneous" width="150" height="=150">
-        </a></div>
+<div class="flex-container">
+        <ul class="flex-1">
+            <li class="ed"><a href="#">
+        <img src="ed books.webp" alt="educational" width="150" height="=150">
+    <p>Educational</p></a></li>
+    <li class="lit"><a href="#">
+        <img src="lit books.webp" alt="literature" width="150" height="=150">
+    <p>Literature</p></a></li>
+    </ul>
+        <ul class="flex-2">
+            <li class="rel"><a href="#">
+        <img src="rel books.webp" alt="religious" width="150" height="=150">
+    <p>Religious</p></a></li>
+    <li class="mis"><a href="#">
+        <img src="mis books.webp" alt="miscalleneous" width="150" height="=150">
+    <p>Miscalleneous</p></a></li>
+        </ul>
 </div>
 <footer class="footer">
     <div class="footer-container">
