--- a/front.html/services.html
+++ b/front.html/services.html
@@ -10,9 +10,9 @@
 <body>
     <div class="top">
         <img id="logo" src="" alt="BookHub" />
-        <p class="quotes">"The man who doesnot read good books is no better than the man who can't"
-                         - Mark Twain                                               
-        </p>
+        <p>"The man who doesnot read good books is no better than the man who can't"
+            </p>
+            <p>- Mark Twain</p>                                              
     </div>
     <nav class="navbar">
         <ul class="nav-list">
