--- a/front.html/about.html
+++ b/front.html/about.html
@@ -43,17 +43,34 @@
                 <img id="photo" src="" alt="adarsha" width="100px" height="100px">
                 <p>Adarsha Pokhrel</p>
                 <p>Contact no:9862906626</p>
+                <div class="social-media">
+                    <a id="fb" href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a id="twtr" href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                    <a id="insta" href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a id="lin" href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+                </div>
             </div>
             <div class="ashish">
                 <img id="photo" src="" alt="ashish" width="100px" height="100px">
                 <p>Ashish Shrestha</p>
                 <p>Contact no:9862906626</p>
+                <div class="social-media">
+                    <a id="fb" href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a id="twtr" href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                    <a id="insta" href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a id="lin" href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+                </div>
             </div>
             <div class="sameen">
                 <img id="photo" src="" alt="sameen" width="100px" height="100px">
                 <p>Sameen Kunwar</p>
                 <p>Contact no:9862906626</p>
-
+                <div class="social-media">
+                    <a id="fb" href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a id="twtr" href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                    <a id="insta" href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a id="lin" href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+                </div>
             </div>
         </div>
 </body>
