--- a/front.html/home.html
+++ b/front.html/home.html
@@ -58,9 +58,9 @@
             <div class="footer-col">
              <h4>Get help</h4>
              <ul>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Payment Options</a></li>
-                <li><a href="#">Shipping</a></li>
+                <li><a href="FAQ.html">FAQ</a></li>
+                <li><a href="Payment.html">Payment Options</a></li>
+                <li><a href="Shipping.html">Shipping</a></li>
              </ul>
             </div>
             <div class="footer-col">
